<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.psspl.unittestexample.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/icn_logo"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="Login"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="80dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_emailId"
            />
        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="peter@klaven"
            android:inputType="textEmailAddress"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="80dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Password"
            />
        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="cityslicka"
            android:inputType="textPassword"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSubmit"
            android:text="Submint"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>






</LinearLayout>
